fixe some cypress e2e test issues

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
         <ul class="navbar-nav ms-auto">
           <li class="nav-item active">
             <a class="nav-link" [routerLink]="['/item/item-list']" [queryParams]="{ gender: 'female', age: 'adulte' }"
-              (click)="collapseNavbar()">Womens</a>
+              (click)="collapseNavbar()">Women</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" [routerLink]="['/item/item-list']" [queryParams]="{ gender: 'male', age: 'adulte' }"
