--- a/src/app/checkout/payment-information/payment-information.component.html
+++ b/src/app/checkout/payment-information/payment-information.component.html
@@ -83,7 +83,7 @@
 
         </div>
     </form>
-    <button id="nextButton" class="btn btn-primary sm:tw-w-[200px] tw-w-full tw-self-end tw-mt-auto"
+    <button id="paymentNextButton" class="btn btn-primary sm:tw-w-[200px] tw-w-full tw-self-end tw-mt-auto"
         (click)="onNextClick()">Next</button>
 
 </div>
