added About page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -70,5 +70,11 @@
   <main class="tw-h-full tw-overflow-auto">
     <router-outlet/>
   </main>
-  <!-- <footer>page footer</footer> -->
+  <footer>
+    <div class="tw-flex tw-flex-row tw-ps-3 tw-pe-3 tw-text-gray-500">
+      <p class="tw-text-sm">© 2024 Nike, Inc.</p>
+      <a class="tw-text-sm tw-ms-auto" [routerLink]="['/about']">About us</a>
+    </div>
+   
+  </footer>
 </div>
